buttons no longer cutting off

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 body {
   font-family: 'Lexend Tera', sans-serif;
   overflow: hidden;
+  height: 100vh;
 }
 
 code {
